# PongTracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
config/: OpenNI.ini
